--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,55 +1,71 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+            cost: 12
+
+    # Configure where users come from (database, LDAP, etc.)
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+
     firewalls:
+        # Public access firewall for the login, register, and public home page
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
-            lazy: true
-            provider: users_in_memory
+            anonymous: lazy
+            provider: app_user_provider
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+            # Login form configuration
+            form_login:
+                login_path: security_login
+                check_path: security_login
+                csrf_token_generator: security.csrf.token_manager
+                default_target_path: dashboard
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            logout:
+                path: security_logout
+                target: home
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+            # Session parameters for security
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week
+                path:     /
+                always_remember_me: false
+
     access_control:
-        - { path: ^/$, roles: PUBLIC_ACCESS }
-        - { path: ^/login$, roles: PUBLIC_ACCESS }
-        - { path: ^/register$, roles: PUBLIC_ACCESS }
-        - { path: ^/logout$, roles: PUBLIC_ACCESS }
+        # Allowing unrestricted access to login, register, and home pages
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+        # Only authenticated users can access logout
+        - { path: ^/logout$, roles: IS_AUTHENTICATED_FULLY }
+
+        # Only users with ROLE_USER can access these pages
         - { path: ^/dashboard, roles: ROLE_USER }
         - { path: ^/job-offers, roles: ROLE_USER }
-        - { path: ^/job-offers/new$, roles: ROLE_USER }
-        - { path: ^/job-offers/\d+$, roles: ROLE_USER }
-        - { path: ^/job-offers/\d+$/edit, roles: ROLE_USER }
-        - { path: ^/job-offers/\d+$/delete, roles: ROLE_USER }
-        - { path: ^/linkedin-message/generate, roles: ROLE_USER }
-        - { path: ^/linkedin-message/\d+$, roles: ROLE_USER }
-        - { path: ^/cover-letter/generate, roles: ROLE_USER }
-        - { path: ^/cover-letter/\d+$, roles: ROLE_USER }
+        - { path: ^/linkedin-message, roles: ROLE_USER }
+        - { path: ^/cover-letter, roles: ROLE_USER }
         - { path: ^/kanban, roles: ROLE_USER }
         - { path: ^/api/job-offers/update-status, roles: ROLE_USER }
 
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
+    # Configure how users are authenticated
+    # (e.g. login form, API token, etc.)
+    access_decision_manager:
+        strategy: unanimous
 
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+# Security tokens for CSRF protection
+framework:
+    csrf_protection:
+        enabled: true
