--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,16 +1,12 @@
-root_redirect: # Redirection de la racine vers une langue par défaut
-    path: / # Route de la racine
-    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
-    defaults:
-        route: app_home # Route de la racine
-        permanent: true # Statut HTTP (301 ou 302)
-        _locale: en # Langue par défaut
+# config/routes.yaml
+app_home:
+    path: /
+    controller: App\Controller\HomeController::index
 
-controllers:
-    prefix: /{_locale}/ # Préfixe de la racine de l'application
-    app_home:
-        path: /
-        resource:
-            path: ../src/Controller/
-            namespace: App\Controller
-        type: attribute
+login:
+    path: /login
+    controller: App\Controller\SecurityController::login
+
+register:
+    path: /register
+    controller: App\Controller\RegistrationController::register
