--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,12 +1,5 @@
-# config/routes.yaml
-app_home:
-    path: /
-    controller: App\Controller\HomeController::index
-
-login:
-    path: /login
-    controller: App\Controller\SecurityController::login
-
-register:
-    path: /register
-    controller: App\Controller\RegistrationController::register
+controllers:
+    resource:
+        path: ../src/Controller/
+        namespace: App\Controller
+    type: attribute
