--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,9 +21,11 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
+                enable_csrf: true
             logout:
                 path: app_logout
-                target: app_home
+                # where to redirect after logout
+                # target: app_any_route
 
     # Access control
     access_control:
